--- a/.github/workflows/ssh-build.yml
+++ b/.github/workflows/ssh-build.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: "Build Server"
